--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy = "^2.0.27"
 alembic = "^1.13.1"
 psycopg2 = "^2.9.9"
 phonenumbers = "^8.13.30"
+email-validator = "^2.1.0.post1"
 
 
 [build-system]
