--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ alembic = "^1.13.1"
 psycopg2 = "^2.9.9"
 phonenumbers = "^8.13.30"
 email-validator = "^2.1.0.post1"
+faker = "^23.2.1"
 
 
 [build-system]
